force-app/main/default/objects/Home_Loan_Ladder__c/Home_Loan_Ladder__c.object-meta.xml
<CustomObject>
    <label>Home Loan Ladder</label>
    <nameField>
        <label>Home Loan Ladder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Home Loan Ladders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>