force-app/main/default/objects/Home_Loan_Ladder__c/fields/Amount_Range_To__c.field-meta.xml
<CustomField>
    <fullName>Amount_Range_To__c</fullName>
    <label>Amount Range To</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>