force-app/main/default/objects/Home_Loan_Ladder__c/fields/APF__c.field-meta.xml
<CustomField>
    <fullName>APF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>APF</label>
    <referenceTo>APF__c</referenceTo>
    <relationshipLabel>Home Loan Ladders</relationshipLabel>
    <relationshipName>Home_Loan_Ladders</relationshipName>
    <type>Lookup</type>
</CustomField>