force-app/main/default/objects/Home_Loan_Ladder__c/fields/Gross_Payout__c.field-meta.xml
<CustomField>
    <fullName>Gross_Payout__c</fullName>
    <label>Gross Payout</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>